<resources>
    <string name="app_name">SpielManager</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_manage_players">Spielerverwaltung</string>
    <string name="action_reset">Reset</string>

    <string name="title">Titel</string>
    <string name="spieleranzahl">Spieleranzahl</string>
    <string name="rating">Rating</string>
    <string name="rating_default">10</string>

    <string name="editText_hint_title">Titel</string>
    <string name="editText_hint_minSpieler">min</string>
    <string name="editText_hint_maxSpieler">max</string>
    <string name="editText_new_title">Neuer Titel</string>
    <string name="editText_new_minSpieler">Neue Mindestanzahl</string>
    <string name="editText_new_maxSpieler">Neue Maximalanzahl</string>

    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="shortname">Abkürzung</string>

    <string name="editText_firstname">Dein Vorname</string>
    <string name="editText_lastname">Dein Nachname</string>
    <string name="editText_shortname">Deine Abkürzung</string>

    <string name="button_add_game">+</string>
    <string name="button_add_player">+</string>

    <string name="editText_errorMessage">Das Feld darf nicht leer sein.</string>

    <string name="action_delete">Einträge löschen</string>
    <string name="action_change">Eintrag ändern</string>
    <string name="cab_checked_string">ausgewählt</string>
    <string name="action_teile_spieldaten">Share</string>
    <string name="action_filter">Filter</string>

    <string name="dialog_change_game">Listeneintrag ändern</string>

    <string name="dialog_button_positive">Ok</string>
    <string name="dialog_button_negative">Abbrechen</string>
    <string name="dialog_message_delete">Möchten Sie wirklich alle ausgewählten Einträge löschen?</string>
</resources>
