<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.apps.rb.spielmanager.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_manage_players"
        android:orderInCategory="200"
        android:title="@string/action_manage_players"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="300"
        android:title="@string/action_reset"
        app:showAsAction="never" />



    <item android:id="@+id/action_teile_spieldaten"
        android:title="@string/action_teile_spieldaten"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom" />
</menu>
