<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/firstname"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="@string/editText_firstname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_lastname"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/editText_lastname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/shortname"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_shortname"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/editText_shortname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancelPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="Abbbrechen"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_savePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="Speichern"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>