<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"  >

<!--    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="This is the Add-Game-Activity" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editText_newGame_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/editText_hint_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/spieleranzahl"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editText_newGame_minSpieler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/editText_hint_minSpieler" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="-"
            android:gravity="center" />

        <EditText
            android:id="@+id/editText_newGame_maxSpieler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/editText_hint_maxSpieler" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="Cover-Foto"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/button_take_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="Cover"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2">

                <TableLayout
                    android:id="@+id/table_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:stretchColumns="*">
                </TableLayout>
            </ScrollView>

            <Button
                android:id="@+id/button_AddRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/button_add_game"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="Cancel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_saveGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="Save"
            android:textSize="16sp" />
    </LinearLayout>

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="Cancel"
            android:id="@+id/button_cancel"
            android:layout_width="250px"
            android:textSize="18px"
            android:layout_height="55px"
        </Button>
        <Button
            android:text="Cancel"
            android:id="@+id/button_add"
            android:layout_width="250px"
            android:textSize="18px"
            android:layout_height="55px"
        </Button>
    </LinearLayout>-->

</LinearLayout>